# homeAssignmentUniversityHospitalBern

./: .gitignore  README.md  TODO  docker-compose.yaml
backend-api/: .dockerignore  .env.docker  .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json
backend-api/dicom-parser/: pyproject.toml
backend-api/dicom-parser/dicom_parser/: __init__.py  parser.py
backend-api/src/: app.module.ts  main.ts
backend-api/src/database/: create_tables.sql
backend-api/src/file/: file.constants.ts  file.model.ts  file.module.ts  file.repository.interface.ts  file.repository.ts  file.service.ts
backend-api/src/modality/: modality.module.ts
backend-api/src/object-storage/: local-filesystem.object-storage.ts  object-storage.constants.ts  object-storage.interface.ts  object-storage.module.ts
backend-api/src/patient/: patient.model.ts  patient.module.ts  patient.repository.interface.ts  patient.service.ts  patients.repository.ts
backend-api/src/series/: series.constants.ts  series.model.ts  series.module.ts  series.repository.interface.ts  series.repository.ts  series.service.ts
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/locales/: en.json  srb.json
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/clients/: backendApiClient.ts
frontend/src/compoents/: AppBar.tsx
frontend/src/components/: AppBar.tsx  DicomViewer.tsx  ErrorBoundary.tsx  FileListingTable.tsx  FileUpload.tsx
frontend/src/hooks/: useDicomViewer.ts  useFileListing.ts  useFileUpload.ts
(+13 files in other folders)
